Added a simple API provider 	- Includes Unit-tested deserializations 	- Will facilitate later testing

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -56,3 +56,4 @@ glide-compose = { module = "com.github.bumptech.glide:compose", version.ref = "g
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
