--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,13 @@
 [versions]
 activityCompose = "1.10.0"
 agp = "8.8.0"
-composeBom = "2025.01.00"
+composeBom = "2025.01.01"
 coreKtx = "1.15.0"
 coroutines = "1.9.0"
 daggerHilt = "2.52"
 devtoolsKsp = "2.0.21-1.0.26"
 espressoCore = "3.6.1"
+glideLegacy = "4.15.1"
 glideCompose = "1.0.0-beta01"
 hiltNavigationCompose = "1.2.0"
 junit = "4.13.2"
@@ -15,6 +16,7 @@ kotlin = "2.0.21"
 kotlinSerializationJson = "1.7.3"
 ktor = "3.0.1"
 lifecycle = "2.8.7"
+recyclerview = "1.4.0"
 sdk-min = "24"
 sdk-compile = "35"
 sdk-target = "35"
@@ -30,17 +32,18 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
 androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name="lifecycle-runtime-compose", version.ref = "lifecycle" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name="lifecycle-viewmodel-compose", version.ref = "lifecycle" }
+
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+
 hilt = { module = "com.google.dagger:hilt-android", version.ref = "daggerHilt" }
 hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "daggerHilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "daggerHilt" }
 hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
-kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutines" }
 kotlin-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinSerializationJson" }
 
@@ -50,7 +53,6 @@ kotlin-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-s
 ktor-client = { group = "io.ktor", name="ktor-client-core", version.ref = "ktor" }
 ktor-client-android = { group = "io.ktor", name="ktor-client-android", version.ref = "ktor" }
 ktor-client-json = { group = "io.ktor", name="ktor-serialization-kotlinx-json", version.ref = "ktor" }
-ktor-client-logging = { group = "io.ktor", name="ktor-client-logging", version.ref = "ktor" }
 ktor-client-negotiation = { group = "io.ktor", name="ktor-client-content-negotiation", version.ref = "ktor" }
 
 # Testing
@@ -58,8 +60,12 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 
 # Image Handling
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glideLegacy" }
 glide-compose = { module = "com.github.bumptech.glide:compose", version.ref = "glideCompose" }
 
+# Legacy (XML) Support
+
+androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
