Added "Main" Feed using Recycler
- Cheated (Slightly) by wrapping in a compose
- Added Back button support
- Wired up the view model to render correctly

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 activityCompose = "1.10.0"
 agp = "8.8.0"
+cardview = "1.0.0"
 composeBom = "2025.01.01"
 coreKtx = "1.15.0"
 coroutines = "1.9.0"
@@ -20,11 +21,13 @@ recyclerview = "1.4.0"
 sdk-min = "24"
 sdk-compile = "35"
 sdk-target = "35"
+uiViewbinding = "1.7.7"
 
 
 [libraries]
 # Core
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -64,8 +67,8 @@ glide = { module = "com.github.bumptech.glide:glide", version.ref = "glideLegacy
 glide-compose = { module = "com.github.bumptech.glide:compose", version.ref = "glideCompose" }
 
 # Legacy (XML) Support
-
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
+androidx-ui-viewbinding = { group = "androidx.compose.ui", name = "ui-viewbinding", version.ref = "uiViewbinding" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
